--- a/src/components/Questions.astro
+++ b/src/components/Questions.astro
@@ -31,7 +31,7 @@ const faqs = [
 ];
 ---
 
-<section class="py-24">
+<section class="py-24" id="preguntas">
   <div class="container mx-auto px-4">
     <div class="text-center mb-8">
       <h2 class="text-4xl md:text-5xl font-bold mb-4">
