--- a/src/components/waves.astro
+++ b/src/components/waves.astro
@@ -1,7 +1,4 @@
-<div
-  id="shopify-section-template--19375417524373__section_divider_3gyr6g"
-  class="shopify-section"
->
+<div id="shopify-section-template--19375417524373__section_divider_3gyr6g" class="shopify-section">
   <style data-shopify="">
     .section-divider-template--19375417524373__section_divider_3gyr6g {
       transform: scaleX(1) scaleY(1);
